Make gc logging dependent on java version