@@ -107,6 +107,23 @@ applicationDefaultJvmArgs = [
 
 startScripts {
     doLast {
+        // Make a version dependent GC logging
+        unixScript.text = unixScript.text.replace(
+            '# Collect all arguments for the java command, following the shell quoting and substitution rules\n',
+            '''\
+            GC_LOG_FILE=GRAPHOUSE_APP_HOME/log/graphouse.gc.log
+            MODERN_GC_SUPPORTED="$JAVACMD -Xlog:gc -version 1>/dev/null 2>&1"
+            LEGACY_GC_SUPPORTED="$JAVACMD -XX:+PrintGCDateStamps -version 1>/dev/null 2>&1"
+            if eval $MODERN_GC_SUPPORTED && eval ! $LEGACY_GC_SUPPORTED; then
+                GC_LOGGING_OPTIONS="-Xlog:gc*:file=${GC_LOG_FILE}:time:filecount=7,filesize=50M"
+            elif eval $LEGACY_GC_SUPPORTED && eval ! $MODERN_GC_SUPPORTED
+                GC_LOGGING_OPTIONS="-verbose:gc -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=7 -XX:GCLogFileSize=50M -Xloggc:${GC_LOG_FILE}"
+            fi
+            GRAPHOUSE_OPTS="${GRAPHOUSE_OPTS} ${GC_LOGGING_OPTIONS}"
+
+            # Collect all arguments for the java command, following the shell quoting and substitution rules
+            '''.stripIndent()
+        )
         unixScript.text = unixScript.text.replace('GRAPHOUSE_APP_HOME', '\$APP_HOME')
         unixScript.text = unixScript.text.replace(
             'APP_HOME="`pwd -P`"',
